; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_cprotect.c_cp_key_store_action_for_volume.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_cprotect.c_cp_key_store_action_for_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@CP_LOCKED_STATE = common dso_local global i32 0, align 4
@CP_UNLOCKED_STATE = common dso_local global i32 0, align 4
@cp_lock_vfs_callback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cp_key_store_action_for_volume(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_2__, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %26 [
    i32 129, label %8
    i32 128, label %8
  ]

8:                                                ; preds = %2, %2
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 129
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i32, i32* @CP_LOCKED_STATE, align 4
  br label %15

13:                                               ; preds = %8
  %14 = load i32, i32* @CP_UNLOCKED_STATE, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = phi i32 [ %12, %11 ], [ %14, %13 ]
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 2
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @memcpy(i32 %19, i32 %20, i32 4)
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32 1, i32* %22, align 4
  %23 = load i32, i32* @cp_lock_vfs_callback, align 4
  %24 = bitcast %struct.TYPE_2__* %6 to i8*
  %25 = call i32 @vfs_iterate(i32 0, i32 %23, i8* %24)
  store i32 %25, i32* %3, align 4
  br label %27

26:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %15
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @vfs_iterate(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
